2.kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: myhost.foo.bar
    http:
      paths:
      - backend:
          serviceName: my-service
          servicePort: 80
